# tillitis-key1

./: .editorconfig  .gitattributes  .gitignore  README.md  REUSE.toml
.github/workflows/: ci.yaml
LICENSES/: ISC.txt  README.md  bsd-2.txt  gpl-v2.only.txt  mit.txt  spdx-ensure
contrib/: 99-tillitis.rules  Dockerfile  Dockerfile.app  Makefile  build-tkey.sh  build-unlocked.sh  buildtools.sh  verible.sha512
doc/: quickstart.md  release_notes.md  toolchain_setup.md
doc/framing_protocol/: framing_protocol.md
doc/system_description/: boards.md  firmware.md  fpga.md  memory_model.md  software.md  system_description.md
doc/threat_model/: threat_model.md
hw/application_fpga/: Makefile  README.md  application_fpga.bin.sha256  config.vlt  firmware.bin.sha512
hw/application_fpga/apps/: Makefile  README.md  syscall.S
hw/application_fpga/data/: application_fpga_mta1_usb_dev.pcf  application_fpga_mta1_usb_v1.pcf  application_fpga_tk1.pcf  application_fpga_tk1_uwg30.pcf  udi.hex  uds.hex
hw/application_fpga/fw/: .clang-format  README.md  mta1_mkdf_mem.h  tk1_mem.h
hw/application_fpga/rtl/: application_fpga.v  clk_reset_gen.v  fw_ram.v  ram.v  reset_gen.v  rom.v  spram.v
hw/application_fpga/tb/: application_fpga_sim.v  application_fpga_verilator.cc  application_fpga_vsim.v  reset_gen_sim.v  (+3 more)
hw/boards/tp1/firmware/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
hw/boards/tp1/firmware/src/: main.c  pio_spi.c  pio_spi.h  spi.pio  tusb_config.h  usb_descriptors.c
hw/production_test/: .gitignore  Makefile  README.md  encode_usb_strings.py  hid_test.py  icebin2nvcm.py  iceflasher.py  icenvcm.py  production_test.py  production_test_runner.py  production_tests.py  pybin2nvcm.py  pynvcm.py  requirements.txt  reset.py  run  usb_test.py
(+494 files in other folders)
